--- a/index.html
+++ b/index.html
@@ -1,62 +1,245 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Midgard</title>
 
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
-    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-
 <body>
+<header>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Midgard</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Servers</a></li>
+                    <li><a href="#">DynMap</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+</header>
 <div class="content">
-    <!--<header>
+    <section id="feature-area">
         <div class="container">
-        <h1>Midgard</h1>
-            <nav>
-                <a href="#">About</a>
-                <a href="#">Servers</a>
-                <a href="#">DynMap</a>
-            </nav>
-        </div>
-        <div class="clear"></div>
-    </header>-->
-    <section class="welcome">
-        <div class="welcomecolor"></div>
-        <div class="container">
-            <div class="logo">
-                <div class="logocolor hide"></div>
-                <h1 class="hide">Midgard</h1>
-                <p class="hide">something new is coming</p>
+            <div class="feature-content">
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4"></div>
+                </div>
             </div>
         </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <div class="column">
-                <h1>Server Links</h1>
-                <a href="http://mc.midgardmc.com:8123">Dynmap</a>
-                <a href="rules.html">Rules</a>
-                <p>Connect: mc.midgardmc.com</p>
-            </div>
-            <div class="column">
-                <h1>Social</h1>
-                <a href="mumble://mc.midgardmc.com">Mumble</a>
-                <a href="https://discord.gg/014TQwrNRaueX975o">Discord</a>
-                <a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a>
-                <a href="https://www.reddit.com/r/MidgardMC/">Reddit</a>
-                <a href="https://github.com/MidgardMC">GitHub</a>
-            </div>
-        </div>
-    </footer>
 </div>
-</body>
+</section>
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4 info">
+                <h1>About</h1>
+                <p>Midgard is an enhanced vanilla whitelist survival server with heavy emphasis on community. We
+                    have
+                    been
+                    around for over half a decade and we pride ourselves on providing our players with a fast, large
+                    server to
+                    play
+                    on.
+                    While we cater to the mature, seasoned player, our server is family-friendly.</p>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+    <div id="featured-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#featured-carousel" data-slide-to="1"></li>
+            <li data-target="#featured-carousel" data-slide-to="2"></li>
+            <li data-target="#featured-carousel" data-slide-to="3"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="images/showcase1.png" alt="...">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/showcase2.png" alt="...">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/showcase3.png" alt="...">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/showcase4.png" alt="...">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#featured-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#featured-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
+<section id="team">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4 info">
+                <h1>The Team</h1>
+                <p>Midgard is staffed by seasoned pros in the Minecraft space. With IT Professionals running the
+                    back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
+                </p>
+            </div>
+            <div class="col-md-4">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3 col-md-3 col-lg-4"></div>
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+                <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
+            </div>
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+                <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3 col-md-3 col-lg-4"></div>
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+                <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
+            </div>
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+                <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-4 col-lg-2"></div>
+        </div>
+    </div>
+</section>
+<section id="midgard-zoo">
+    <div class="container">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+            <h1>Midgard<span class="thin-type">Zoo</span></h1>
+            <p> The Midgard Zoo features are wide variety of the mobs available to users in the world of Minecraft.
+                From
+                the latest mobs like llamas to the old school ones like pigs. The Midgard Zoo has them on display.
+            </p>
+        </div>
+        <div class="col-md-4">
+        </div>
+</section>
+<section id="servers">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <div class="server-feature" id="minecraft">
+                    <div id="mcimage"></div>
+                    <div class="server-feature-container">
+                        <h2>Minecraft</h2>
+                        <h2>
+                            <small>Survival 1.11.2</small>
+                        </h2>
+                        <p>Midgard's flagship Survival Minecraft server.</p>
+                        <a class="btn btn-default" href="#" role="button">Submit Whitelist Request</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <div class="server-feature" id="tf2">
+                    <div id="tf2image"></div>
+                    <div class="server-feature-container">
+                        <div class="server-text">
+                        <h2>Team Fortress 2</h2>
+                        <p>Midgard's Team Fortress 2 server is open for who want to take a break from Minecraft.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
+<footer>
+    <div class="container">
+        <div class="col-md-3">
+            <h3>Server Links</h3>
+            <ul>
+                <li><a href="http://mc.midgardmc.com:8123">Dynmap</a></li>
+                <li><a href="rules.html">Rules</a></li>
+                <li><p>Connect: mc.midgardmc.com</p></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h3>Social</h3>
+            <ul>
+                <li><a href="mumble://mc.midgardmc.com">Mumble</a></li>
+                <li><a href="https://discord.gg/014TQwrNRaueX975o">Discord</a></li>
+                <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
+                <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
+                <li><a href="https://github.com/MidgardMC">GitHub</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
+        </div>
+    </div>
+    </div>
+</footer>
+</div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+<script>
+    $('.carousel').carousel();
+</script>
+</body>
 </html>
