--- a/index.html
+++ b/index.html
@@ -1,62 +1,300 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Midgard is a whitelist Minecraft Community.">
+    <meta name="keywords" content="Minecraft,gaming,video,games">
+    <meta name="author" content="Midgard">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Midgard</title>
-
+    <!-- Reset CSS -->
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
-    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
-
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom Styles-->
+    <link href="css/styles.css" rel="stylesheet">
+    <!-- Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#25c2f2">
+    <meta name="theme-color" content="#ffffff">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-
 <body>
-<div class="content">
-    <!--<header>
+<header>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
         <div class="container">
-        <h1>Midgard</h1>
-            <nav>
-                <a href="#">About</a>
-                <a href="#">Servers</a>
-                <a href="#">DynMap</a>
-            </nav>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Midgard</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#midgard-zoo">Midgard Zoo</a></li>
+                    <li><a href="#servers">Servers</a></li>
+                    <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
-        <div class="clear"></div>
-    </header>-->
-    <section class="welcome">
-        <div class="welcomecolor"></div>
+    </nav>
+</header>
+<div class="content">
+    <section id="feature-area">
         <div class="container">
-            <div class="logo">
-                <div class="logocolor hide"></div>
-                <h1 class="hide">Midgard</h1>
-                <p class="hide">something new is coming</p>
+            <div class="feature-content">
+                <div class="row">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#about" id="scroll-down"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
-    <footer>
+    <section id="about">
         <div class="container">
-            <div class="column">
-                <h1>Server Links</h1>
-                <a href="http://mc.midgardmc.com:8123">Dynmap</a>
-                <a href="rules.html">Rules</a>
-                <p>Connect: mc.midgardmc.com</p>
-            </div>
-            <div class="column">
-                <h1>Social</h1>
-                <a href="mumble://mc.midgardmc.com">Mumble</a>
-                <a href="https://discord.gg/014TQwrNRaueX975o">Discord</a>
-                <a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a>
-                <a href="https://www.reddit.com/r/MidgardMC/">Reddit</a>
-                <a href="https://github.com/MidgardMC">GitHub</a>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>About</h1>
+                    <p>Midgard is an enhanced vanilla whitelist survival server with heavy emphasis on community. We
+                        have
+                        been
+                        around for over half a decade and we pride ourselves on providing our players with a fast, large
+                        server to
+                        play
+                        on.
+                        While we cater to the mature, seasoned player, our server is family-friendly.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/featbuilds1.png" class="img-responsive" alt="Responsive image">
+                </div>
             </div>
         </div>
-    </footer>
-</div>
-</body>
+        <!--<div id="featured-carousel" class="carousel slide" data-ride="carousel">
 
+            <ol class="carousel-indicators">
+                <li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#featured-carousel" data-slide-to="1"></li>
+                <li data-target="#featured-carousel" data-slide-to="2"></li>
+                <li data-target="#featured-carousel" data-slide-to="3"></li>
+            </ol>
+
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="images/showcase1.png" alt="...">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/showcase2.png" alt="...">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/showcase3.png" alt="...">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/showcase4.png" alt="...">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#featured-carousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#featured-carousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>-->
+    </section>
+    <section id="team">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>The Team</h1>
+                    <p>Midgard is staffed by seasoned pros in the Minecraft space. With IT Professionals running the
+                        back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
+                    </p>
+                </div>
+                <div class="col-md-3">
+                    <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
+                    <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
+                </div>
+                <div class="col-md-3">
+                    <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
+                    <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="midgard-zoo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Midgard <span class="thin-type">Zoo</span></h1>
+                    <p> The Midgard Zoo features are wide variety of the mobs available to users in the world of
+                        Minecraft.
+                        From
+                        the latest mobs like llamas to the old school ones like pigs. The Midgard Zoo has them on
+                        display.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/zoo.png" class="img-responsive" alt="Responsive image">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="servers">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-6">
+                    <h1>Servers</h1>
+                </div>
+                <div class="col-md-6 col-lg-6">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-6">
+                    <div class="server-feature" id="minecraft">
+                        <div id="mcimage"></div>
+                        <div class="server-feature-container">
+                            <h2>Minecraft</h2>
+                            <h2>
+                                <small>Survival 1.11.2</small>
+                            </h2>
+                            <p>Midgard's flagship Survival Minecraft server.</p>
+                            <a class="btn btn-default" data-toggle="modal" data-target="#myModal" role="button">Submit
+                                Whitelist Request</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6">
+                    <div class="server-feature" id="tf2">
+                        <div id="tf2image"></div>
+                        <div class="server-feature-container">
+                            <div class="server-text">
+                                <h2>Team Fortress 2</h2>
+                                <p>Midgard's Team Fortress 2 server is open for users who want to take a break from
+                                    Minecraft.</p>
+                                <p>Connection Info:</p>
+                                <code>tf2.midgardmc.com Password: multipass</code>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+<footer>
+    <div class="container">
+        <div class="col-md-3">
+            <h3>Server Links</h3>
+            <ul>
+                <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
+                <li><a href="rules.html">Rules</a></li>
+                <li><p>Connect: mc.midgardmc.com</p></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h3>Social</h3>
+            <ul>
+                <li><a href="mumble://mc.midgardmc.com">Mumble</a></li>
+                <li><a href="https://discord.gg/014TQwrNRaueX975o">Discord</a></li>
+                <li><a href="https://www.facebook.com/mcmidgard">Facebook</a></li>
+                <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
+                <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
+                <li><a href="https://github.com/MidgardMC">GitHub</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
+        </div>
+    </div>
+    </div>
+</footer>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Whitelist Request</h4>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDZX6p3AtEO_881GNLVRczeaMKzOn5pkFKK3qanTh4waLfDg/viewform?embedded=true"
+                        frameborder="0" marginheight="0" marginwidth="0">Loading...
+                </iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script>
+    $('.carousel').carousel();
+    $('#myModal').modal(options);
+</script>
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+        // EVENT HANDLERS
+        $('nav a, #scroll-down').on('click', function (event) {
+            event.preventDefault();
+
+
+            var destination = $(this).attr('href');
+
+
+            $('html, body').stop().animate({
+                scrollTop: $(destination).offset().top - 55
+            }, 1500, 'easeInOutExpo');
+        });
+
+    });
+
+
+</script>
+</body>
 </html>
