--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
                     <li><a href="http://imgur.com/a/0GWt1" target="_blank">Gallery</a></li>
                     <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Join Us</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Community Links<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Community Links<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="http://mc.midgardmc.com:8123" target="_blank">DynMap</a></li>
                             <li role="separator" class="divider"></li>
                             <li>
-                                <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing" target="_blank">Rules</a>
+                                <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
+                                   target="_blank">Rules</a>
                             </li>
                         </ul>
                     </li>
@@ -91,15 +93,57 @@
 </header>
 <div class="content">
     <section id="feature-area">
+        <div id="carousel-midgard" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-midgard" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-midgard" data-slide-to="1"></li>
+                <li data-target="#carousel-midgard" data-slide-to="2"></li>
+                <li data-target="#carousel-midgard" data-slide-to="3"></li>
+            </ol>
 
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <div id="homeimage4"></div>
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+                <div class="item">
+                    <div id="homeimage2"></div>
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+                <div class="item">
+                    <div id="homeimage1"></div>
+                    <!--<img class="img-responsive" src="images/homeslider1.png" alt="...">-->
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+                <div class="item">
+                    <div id="homeimage3"></div>
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-midgard" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-midgard" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </section>
     <section class="featured-sections" id="feature-area-text">
         <div class="feature-content">
             <div class="container">
                 <h1>6 years of Midgard</h1>
                 <h2>Join our 6 year old community and see what an enhanced vanilla server is like.</p>
-                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
-                        Whitelist Request</a>
+                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit Whitelist Request</a>
             </div>
     </section>
     <section class="featured-sections" id="about">
@@ -121,51 +165,6 @@
                 </div>
             </div>
         </div>
-        <!--<div id="featured-carousel" class="carousel slide" data-ride="carousel">
-
-            <ol class="carousel-indicators">
-                <li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#featured-carousel" data-slide-to="1"></li>
-                <li data-target="#featured-carousel" data-slide-to="2"></li>
-                <li data-target="#featured-carousel" data-slide-to="3"></li>
-            </ol>
-
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="images/showcase1.png" alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="images/showcase2.png" alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="images/showcase3.png" alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="images/showcase4.png" alt="...">
-                    <div class="carousel-caption">
-                        ...
-                    </div>
-                </div>
-            </div>
-
-            <a class="left carousel-control" href="#featured-carousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#featured-carousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>-->
     </section>
     <section class="featured-sections" id="team">
         <div class="container">
@@ -254,14 +253,15 @@
             <ul>
                 <li><a href="http://mc.midgardmc.com:8123" target="_blank">DynMap</a></li>
                 <li>
-                    <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing" target="_blank">Rules</a>
+                    <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
+                       target="_blank">Rules</a>
                 </li>
             </ul>
         </div>
         <div class="col-md-3">
             <h3>Social</h3>
             <ul>
-                <li><a href="#">Mumble (By Request Only)</a></li>
+                <li><a href="#">Mumble</a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
                 <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
                 <li><a href="https://github.com/MidgardMC">GitHub</a></li>
@@ -280,6 +280,7 @@
 <script src="js/jquery.easing.1.3.js"></script>
 <script>
     $('.carousel').carousel();
+
 </script>
 <script type="text/javascript">
 
